--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>A small river named Duden <a href="#">flows by their place</a> and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+								<p>I am interested in using deep learning method to estimate any musical description. Particularly, I’ve worked on musical structure estimation and voice processing with Convolutional Neural Network (CNN). My work fits in Music Information Retrieval (MIR) field, from signal processing to any neural network methods.</p>
 								<p class="colorlib-social-icons">
 									<a href="#"><i class="icon-facebook4"></i></a>
 									<a href="#"><i class="icon-twitter3"></i></a>
