--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Noah Template</title>
+	<title>Alice Cohen-Hadria</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -25,7 +25,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -95,7 +95,7 @@
 			</div>
 		</div>
 	</nav>
-	
+
 	<div id="colorlib-page">
 		<header>
 			<div class="container">
@@ -109,7 +109,7 @@
 				</div>
 			</div>
 		</header>
-		
+
 		<div id="colorlib-contact">
 			<div class="container">
 				<div class="row text-center">
@@ -134,10 +134,10 @@
 							<div class="col-md-4 animate-box">
 								<h3>My Address</h3>
 								<ul class="contact-info">
-									<li><span><i class="icon-map5"></i></span>88 West 21th Street, Suite 721 New York NY 10016</li>
-									<li><span><i class="icon-phone4"></i></span>+ 1235 2355 98</li>
-									<li><span><i class="icon-envelope2"></i></span><a href="#">info@yoursite.com</a></li>
-									<li><span><i class="icon-globe3"></i></span><a href="#">www.yoursite.com</a></li>
+									<li><span><i class="icon-map5"></i></span>A place Igor Stravinsky, 75004 Paris</li>
+									<li><span><i class="icon-phone4"></i></span>+331 44 78 14 22</li>
+									<li><span><i class="icon-envelope2"></i></span><a href="#">alice.cohenhadria@gmail.com</a></li>
+									<li><span><i class="icon-globe3"></i></span><a href="#">https://alicecohenh.github.io/</a></li>
 								</ul>
 							</div>
 							<div class="col-md-7 col-md-push-1 animate-box">
@@ -169,7 +169,7 @@
 				</div>
 			</div>
 		</div>
-
+<!-- 
 		<footer>
 			<div id="footer">
 				<div class="container">
@@ -235,8 +235,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 				</div>
 			</div>
-		</footer>
-	
+		</footer> -->
+
 	</div>
 
 	<!-- jQuery -->
@@ -258,4 +258,3 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 	</body>
 </html>
-
