--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
 								<h3>My Address</h3>
 								<ul class="contact-info">
 									<li><span><i class="icon-map5"></i></span>1 place Igor Stravinsky, 75004 Paris</li>
-									<li><span><i class="icon-phone4"></i></span>+331 44 78 14 22</li>
+									<li><span><i class="icon-phone4"></i></span>+33 1 44 78 14 22</li>
 									<li><span><i class="icon-envelope2"></i></span><a href="#">alice.cohenhadria@gmail.com</a></li>
 									<li><span><i class="icon-globe3"></i></span><a href="#">https://alicecohenh.github.io/</a></li>
 								</ul>
