--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 									<a href="https://twitter.com/AliceCohenH"><i class="icon-twitter3"></i></a>
 									<a href="https://www.ircam.fr/person/alice-cohen-hadria/"><i class="icon-dribbble2"></i></a>
 								</p>
-								<p><a href="#" class="btn btn-primary btn-outline">Contact Me!</a></p>
+								<p><a href="mailto:alice.cohenhadria@gmail.com" class="btn btn-primary btn-outline">Contact Me!</a></p>
 							</div>
 						</div>
 					</div>
