--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -95,14 +95,14 @@
 			</div>
 		</div>
 	</nav>
-	
+
 	<div id="colorlib-page">
 		<header>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+							<a class="colorlib-logo" href="index.html"><span>A</span><span>CH</span></a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
@@ -204,7 +204,7 @@
 		                <div class="progress-value">100%</div>
 		            </div>
 		         </div>
-			 
+
 		         <div class="col-md-3 col-sm-6 text-center">
 		         	<h2 class="progress-head">Illustration</h2>
 		            <div class="progress yellow">
@@ -368,7 +368,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</div>
 		</footer>
-	
+
 	</div>
 
 	<!-- jQuery -->
@@ -390,4 +390,3 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 	</body>
 </html>
-
