--- a/papers.html
+++ b/papers.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Noah Template</title>
+	<title>Alice Cohen-Hadria</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -69,7 +69,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="services.html">Services</a></li>
-							<li class="active"><a href="work.html">Paper</a></li>
+							<li class="active"><a href="papers.html">Papers</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
@@ -78,7 +78,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="head-title">Works</h2>
+						<h2 class="head-title">Papers</h2>
 						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
@@ -117,8 +117,8 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Portfolio</span>
-						<h2>Done Projects</h2>
+						<span>Overview</span>
+						<h2>Academic publications</h2>
 					</div>
 				</div>
 				<div class="row">
