--- a/index.html
+++ b/index.html
@@ -225,12 +225,12 @@
 		<div id="colorlib-work">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Works</h2>
+					<h2 class="bold">Papers</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Portfolio</span>
-						<h2>Done Projects</h2>
+						<span>Overviwe</span>
+						<h2>Academic publications</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -243,7 +243,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-1.jpg);">
+							<a href="papers.html" class="work-img" style="background-image: url(images/work-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Pursuing Best</h2>
@@ -260,7 +260,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-2.jpg);">
+							<a href="papers.html" class="work-img" style="background-image: url(images/work-2.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Coordinates</h2>
@@ -277,7 +277,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-3.jpg);">
+							<a href="papers.html" class="work-img" style="background-image: url(images/work-3.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Cristall</h2>
@@ -294,7 +294,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-4.jpg);">
+							<a href="papers.html" class="work-img" style="background-image: url(images/work-4.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Black</h2>
