--- a/papers.html
+++ b/papers.html
@@ -134,13 +134,13 @@
 							<a href="work-single.html" class="work-img" style="background-image: url(images/work-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Pursuing Best</h2>
+										<h2>Source separation & Data augmentation</h2>
 									</div>
 								</div>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p> In this paper, we present our data augmentation algorithm, tailored for singing voice extraction</p>
 									<p class="read"><a href="#">View details</a></p>
 								</div>
 							</div>
