source sep page

--- a/source-sep.html
+++ b/source-sep.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Alice Cohen-Hadria</title>
+	<title>Noah Template</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -19,7 +19,6 @@
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
-
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
@@ -69,7 +68,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="services.html">Services</a></li>
-							<li class="active"><a href="papers.html">Papers</a></li>
+							<li class="active"><a href="work.html">Work</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
@@ -78,7 +77,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="head-title">Papers</h2>
+						<h2 class="head-title">Works</h2>
 						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
@@ -113,12 +112,12 @@
 		<div id="colorlib-work">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Papers</h2>
+					<h2 class="bold">Works</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Overview</span>
-						<h2>Academic publications</h2>
+						<span>Portfolio</span>
+						<h2>Portfolio Single</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -131,51 +130,16 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-1.jpg);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>Source separation & Data augmentation</h2>
-									</div>
-								</div>
+							<a href="work.html" class="work-img" style="background-image: url(images/work-1.jpg);">
 							</a>
-							<div class="col-md-4 col-md-offset-4">
+							<div class="col-md-8 col-md-offset-2">
 								<div class="desc">
-									<p> In this paper, we present our data augmentation algorithm, tailored for singing voice extraction</p>
-									<p class="read"><a href="source-sep.html">View Details</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-2.jpg);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>Structure estimation</h2>
-									</div>
-								</div>
-							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>We investigated different input representation to detect music structure boundaries.</p>
-									<p class="read"><a href="#">View Details</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-3.png);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>DALI dataset</h2>
-									</div>
-								</div>
-							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>We constructed the largest dataset of audio and lyrics aligned, using singing voice detection with deep learning.</p>
-									<p class="read"><a href="#">View details</a></p>
+									<h2>Pursuing Best</h2>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+									<img class="img-responsive" src="images/work-2.jpg" alt="html5 bootstrap template by colorlib.com"><br>
+									<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+									<p class="read"><a href="#">Live Preview</a></p>
 								</div>
 							</div>
 						</div>
@@ -184,7 +148,7 @@
 			</div>
 		</div>
 
-		<!-- <footer>
+		<footer>
 			<div id="footer">
 				<div class="container">
 					<div class="row">
@@ -249,7 +213,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 				</div>
 			</div>
-		</footer> -->
+		</footer>
 
 	</div>
 
