--- a/papers.html
+++ b/papers.html
@@ -131,7 +131,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-1.jpg);">
+							<a href="source-sep.html" class="work-img" style="background-image: url(images/work-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Source separation & Data augmentation</h2>
