--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 		<footer>
 			<div id="footer">
 				<div class="container">
-					<div class="row">
+					<!-- <div class="row"> -->
 						<div class="col-md-4 col-pb-sm">
 							<div class="row">
 								<div class="col-md-10">
