--- a/source-sep.html
+++ b/source-sep.html
@@ -112,12 +112,12 @@
 		<div id="colorlib-work">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Papers</h2>
+					<h2 class="bold">Paper</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
 						<span>Eusipco 2019</span>
-						<h2>Source separation and data augmentation</h2>
+						<h2>Source separation & data augmentation</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -134,12 +134,14 @@
 							</a>
 							<div class="col-md-8 col-md-offset-2">
 								<div class="desc">
-									<h2>Pursuing Best</h2>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
-									<img class="img-responsive" src="images/work-2.jpg" alt="html5 bootstrap template by colorlib.com"><br>
-									<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-									<p class="read"><a href="#">Live Preview</a></p>
+									<h2>Abstract</h2>
+									<p>State-of-the-art singing voice separation is based on deep learning making use of CNN structures with skip connections (like U-net model, Wave-U-Net model, or MSDENSELSTM). A key to the success of these models is the availability of a large amount of training data. In the following study, we are interested in singing voice separation for mono signals and will investigate into comparing the U-Net and the Wave-U-Net that are structurally similar, but work on different input representations. </p>
+									<p>
+										First, we report a few results on variations of the U-Net model. Second, we will discuss the potential of state of the art speech and music transformation algorithms for augmentation of existing data sets and demonstrate that the effect of these augmentations depends on the signal representations used by the model. The results demonstrate a considerable improvement due to the augmentation for both models. But pitch transposition is the most effective augmentation strategy for the U-Net model, while transposition, time stretching, and formant shifting have a much more balanced effect on the Wave-U-Net model. Finally, we compare the two models on the same dataset.
+									</p>
+									<img class="img-responsive" src="images/work-9.png" alt="html5 bootstrap template by colorlib.com"><br>
+									<p class="read"><a href="http://eusipco2019.org/">Accepted at Eusipco 2019 </p>
+									<p class="read"><a href="https://arxiv.org/pdf/1903.01415.pdf">PDF link</a></p>
 								</div>
 							</div>
 						</div>
@@ -150,7 +152,7 @@
 
 		<footer>
 			<div id="footer">
-				<div class="container">
+				<!-- <div class="container">
 					<div class="row">
 						<div class="col-md-4 col-pb-sm">
 							<div class="row">
@@ -201,7 +203,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
