--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="rotate">
-							<h2 class="heading">Portfolio</h2>
+							<h2 class="heading">Papers</h2>
 						</div>
 					</div>
 				</div>
@@ -246,14 +246,14 @@
 							<a href="papers.html" class="work-img" style="background-image: url(images/work-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Pursuing Best</h2>
+										<h2>Source separation & Data augmentation</h2>
 									</div>
 								</div>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
+									<p> In this paper, we present our data augmentation algorithm, tailored for singing voice extraction</p>
+									<p class="read"><a href="source-sep.html">View details</a></p>
 								</div>
 							</div>
 						</div>
@@ -263,13 +263,13 @@
 							<a href="papers.html" class="work-img" style="background-image: url(images/work-2.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Coordinates</h2>
+										<h2>Structure estimation</h2>
 									</div>
 								</div>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>We investigated different input representation to detect music structure boundaries.</p>
 									<p class="read"><a href="#">View Details</a></p>
 								</div>
 							</div>
