--- a/papers.html
+++ b/papers.html
@@ -124,7 +124,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="rotate">
-							<h2 class="heading">Portfolio</h2>
+							<h2 class="heading">Papers</h2>
 						</div>
 					</div>
 				</div>
@@ -148,7 +148,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-2.jpg);">
+							<a href="struct-estim.html" class="work-img" style="background-image: url(images/work-2.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Structure estimation</h2>
@@ -158,14 +158,14 @@
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
 									<p>We investigated different input representation to detect music structure boundaries.</p>
-									<p class="read"><a href="#">View Details</a></p>
+									<p class="read"><a href="struct-estim.html">View Details</a></p>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-3.png);">
+							<a href="dali.html" class="work-img" style="background-image: url(images/work-3.png);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>DALI dataset</h2>
@@ -175,7 +175,7 @@
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
 									<p>We constructed the largest dataset of audio and lyrics aligned, using singing voice detection with deep learning.</p>
-									<p class="read"><a href="#">View details</a></p>
+									<p class="read"><a href="dali.html">View details</a></p>
 								</div>
 							</div>
 						</div>
