--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="colorlib-services">
+		<!-- <div id="colorlib-services">
 			<div class="container">
 				<div class="row text-center">
 					<h2 class="bold">Services</h2>
@@ -220,7 +220,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div id="colorlib-work">
 			<div class="container">
@@ -229,7 +229,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Overviwe</span>
+						<span>Overview</span>
 						<h2>Academic publications</h2>
 					</div>
 				</div>
@@ -277,7 +277,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="papers.html" class="work-img" style="background-image: url(images/work-3.jpg);">
+							<a href="papers.html" class="work-img" style="background-image: url(images/work-9.png);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>DALI dataset</h2>
@@ -296,7 +296,7 @@
 			</div>
 		</div>
 
-		<div id="colorlib-blog">
+		<!-- <div id="colorlib-blog">
 			<div class="container">
 				<div class="row text-center">
 					<h2 class="bold">Blog</h2>
@@ -373,9 +373,9 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
-		<div id="colorlib-testimony">
+		<!-- <div id="colorlib-testimony">
 			<div class="container">
 				<div class="row text-center">
 					<h2 class="bold">Testimonies</h2>
@@ -430,11 +430,11 @@
 			</div>
 		</div>
 
-		<footer>
+		<footer> -->
 			<div id="footer">
 				<div class="container">
-					<!-- <div class="row"> -->
-						<div class="col-md-4 col-pb-sm">
+					<div class="row">
+						<!-- <div class="col-md-4 col-pb-sm">
 							<div class="row">
 								<div class="col-md-10">
 									<h2>Let's Talk</h2>
@@ -483,7 +483,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
