--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
 					<div class="col-md-12">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="services.html">Services</a></li>
+							<li><a href="cv.html">Curriculum Vitae</a></li>
 							<li><a href="papers.html">Papers</a></li>
-							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
@@ -143,6 +142,7 @@
 								<p class="colorlib-social-icons">
 									<a href="https://twitter.com/AliceCohenH"><i class="icon-twitter3"></i></a>
 									<a href="https://www.ircam.fr/person/alice-cohen-hadria/"><i class="icon-dribbble2"></i></a>
+									<a href="https://www.linkedin.com/in/alice-cohen-hadria-a8913a146/"><i class="icon-linkedin"></i></a>
 								</p>
 								<p><a href="mailto:alice.cohenhadria@gmail.com" class="btn btn-primary btn-outline">Contact Me!</a></p>
 							</div>
@@ -240,6 +240,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
