--- a/papers.html
+++ b/papers.html
@@ -68,9 +68,8 @@
 					<div class="col-md-12">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="services.html">Services</a></li>
+							<li><a href="cv.html">Curriculum Vitae</a></li>
 							<li class="active"><a href="papers.html">Papers</a></li>
-							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
