--- a/cv.html
+++ b/cv.html
@@ -174,7 +174,7 @@
 						</div>
 					</div>
 				</div>
-				<p class="read"><a href="images/cv.pdf">Download CV</a></p>
+				<p class="read"><a href="images/cv_cohen-hadria.pdf">Download CV</a></p>
 
 			</div>
 		</div>
