--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 				</div>
 			</div>
 		</div>
-		<!-- <div id="colorlib-services">
+		<div id="colorlib-services">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Services</h2>
+					<h2 class="bold">CV</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
@@ -162,66 +162,65 @@
 							<div class="one-third">
 								<div class="row">
 									<div class="col-md-12 col-md-offset-0 animate-box intro-heading">
-										<span>My Services</span>
-										<h2>Here Are Some of My Skills</h2>
+										<span>Work Experiences</span>
+										<h2>Curriculum Vitae</h2>
 									</div>
 								</div>
 								<div class="row">
 									<div class="col-md-12">
 										<div class="rotate">
-											<h2 class="heading">Services</h2>
+											<h2 class="heading">CV</h2>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>1 - Graphic Design</h3>
+											<h3>1 - Work Experiences</h3>
 											<ul>
-												<li>UI Design</li>
-												<li>Website &amp; Digital Design</li>
-												<li>Brading &amp; Visual Identity</li>
-												<li>Print Design</li>
+												<li>PhD @IRCAm - Music Description Estimation with Deep Learning. Supervised by Geoffroy Peeters.</li>
+												<li>Visiting Scholar @NYU - Voice anonymization in urban sounds. SUpervised by Mark Cartwright, Brian McFee and Juan Bello.</li>
+												<li>Internship @LIP6 - Generic programming for combinatorial classes in Ocaml. Supervised by Matthieu Dien.</li>
+
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>3 - Front End Development</h3>
+											<h3>3 -Meeting Organization</h3>
 											<ul>
-												<li>HTML / CSS</li>
-												<li>JS &amp; Jquery Startup</li>
-												<li>WordPress</li>
-												<li>Jomla</li>
+												<li>Co-chair of Unconference at ISMIR 2018, Paris, France. 400 participants, chairing and organization of debates on MIR subjects.</li>
+												<li>ISMIR 2018 Local committee organization, Paris, France. Meeting of the International Society of Music Information Retrieval, 450 participants.</li>
 											</ul>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>2 - Illustration</h3>
+											<h3>2 - Teaching</h3>
 											<ul>
-												<li>Editorial</li>
-												<li>Narrative</li>
-												<li>Motion Graphics</li>
-												<li>Animation</li>
-												<li>Visual Effects</li>
+												<li><a href="https://www.licence.info.upmc.fr/lmd/licence/2018/ue/1I001-2018oct/">Python (L1)</a> </li>
+												<li><a href="https://www-licence.ufr-info-p6.jussieu.fr/lmd/licence/2015/ue/1I002-2016fev/"> C (L1)</a> </li>
+												<li><a href="http://www-bd.lip6.fr/wiki/site/enseignement/licence/2i009/start"> SQL (L2)</a> </li>
+												<li><a href="http://www-connex.lip6.fr/~guigue/wikihomepage/pmwiki.php?n=Course.CourseLI230"> JAVA (L2)</a> </li>
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>4 - Web Marketing</h3>
+											<h3>4 - Education</h3>
 											<ul>
-												<li>Sales Marketing</li>
-												<li>Invoice</li>
-												<li>eCommerce</li>
+												<li>Master (2nd year) in Computer Science and Signal Processing applied to Music @IRCAM
+													<a href="http://www.atiam.ircam.fr/en/">Link</a>
+												</li>
+												<li>Master (1st year) in Computer Science - Distributed agents, Robotics, Operational research, Interaction and Decision. UPMC 2011- 2014</li>
 											</ul>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="one-forth services-img" style="background-image: url(images/services-img-1.jpg);">
+							<div class="one-forth services-img" style="background-image: url(images/services-img.jpg);">
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</div> -->
+				<p class="read"><a href="images/cv_cohen-hadria.pdf">Download CV</a></p>
 
+			</div>
+		</div>
 		<div id="colorlib-work">
 			<div class="container">
 				<div class="row text-center">
