--- a/cv.html
+++ b/cv.html
@@ -164,6 +164,9 @@
 													<a href="http://www.atiam.ircam.fr/en/">Link</a>
 												</li>
 												<li>Master (1st year) in Computer Science - Distributed agents, Robotics, Operational research, Interaction and Decision. UPMC 2011- 2014</li>
+												<li>
+												Bachelor degree in Computer Science, With Honors, UPMC
+											</li>
 											</ul>
 										</div>
 									</div>
