--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="papers.html" class="work-img" style="background-image: url(images/work-1.jpg);">
+							<a href="source-sep.html" class="work-img" style="background-image: url(images/work-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Source separation & Data augmentation</h2>
@@ -263,7 +263,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="papers.html" class="work-img" style="background-image: url(images/work-2.jpg);">
+							<a href="struct-estim.html" class="work-img" style="background-image: url(images/work-2.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Structure estimation</h2>
@@ -273,14 +273,14 @@
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
 									<p>We investigated different input representation to detect music structure boundaries.</p>
-									<p class="read"><a href="#">View Details</a></p>
+									<p class="read"><a href="struct-estim.html">View Details</a></p>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="papers.html" class="work-img" style="background-image: url(images/work-9.png);">
+							<a href="DALI.html" class="work-img" style="background-image: url(images/work-3.png);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>DALI dataset</h2>
@@ -290,7 +290,7 @@
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
 									<p>We constructed the largest dataset of audio and lyrics aligned, using singing voice detection with deep learning.</p>
-									<p class="read"><a href="#">View details</a></p>
+									<p class="read"><a href="DALI.HTML">View details</a></p>
 								</div>
 							</div>
 						</div>
