--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
 									<p>We constructed the largest dataset of audio and lyrics aligned, using singing voice detection with deep learning.</p>
-									<p class="read"><a href="DALI.HTML">View details</a></p>
+									<p class="read"><a href="dali.html">View details</a></p>
 								</div>
 							</div>
 						</div>
