--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="DALI.html" class="work-img" style="background-image: url(images/work-3.png);">
+							<a href="dali.html" class="work-img" style="background-image: url(images/work-3.png);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>DALI dataset</h2>
