--- a/cv.html
+++ b/cv.html
@@ -155,6 +155,7 @@
 												<li><a href="https://www-licence.ufr-info-p6.jussieu.fr/lmd/licence/2015/ue/1I002-2016fev/"> C (L1)</a> </li>
 												<li><a href="http://www-bd.lip6.fr/wiki/site/enseignement/licence/2i009/start"> SQL (L2)</a> </li>
 												<li><a href="http://www-connex.lip6.fr/~guigue/wikihomepage/pmwiki.php?n=Course.CourseLI230"> JAVA (L2)</a> </li>
+												<li><a href="http://www-licence.ufr-info-p6.jussieu.fr/lmd/licence/2018/ue/2I008-2019fev/"> OCaml (L2)</a> </li>
 											</ul>
 										</div>
 										<div class="services animate-box">
