--- a/cv.html
+++ b/cv.html
@@ -134,7 +134,7 @@
 											<h3>1 - Work Experiences</h3>
 											<ul>
 												<li>PhD @IRCAm - Music Description Estimation with Deep Learning. Supervised by Geoffroy Peeters.</li>
-												<li>Visiting Scholar @NYU - Voice anonymization in urban sounds. SUpervised by Mark Cartwright, Brian McFee and Juan Bello.</li>
+												<li>Visiting Scholar @NYU - Voice anonymization in urban sounds. Supervised by Mark Cartwright, Brian McFee and Juan Bello.</li>
 												<li>Internship @LIP6 - Generic programming for combinatorial classes in Ocaml. Supervised by Matthieu Dien.</li>
 
 											</ul>
