chage color from pink to blue

--- a/index.html
+++ b/index.html
@@ -140,11 +140,12 @@
 								</div>
 								<p>I am interested in using deep learning method to estimate any musical description. Particularly, I’ve worked on musical structure estimation and voice processing with Convolutional Neural Network (CNN). My work fits in Music Information Retrieval (MIR) field, from signal processing to any neural network methods.</p>
 								<p class="colorlib-social-icons">
-									<a href="https://twitter.com/AliceCohenH"><i class="icon-twitter3"></i></a>
-									<a href="https://www.ircam.fr/person/alice-cohen-hadria/"><i class="icon-dribbble2"></i></a>
+									<a href="https://twitter.com/AliceCohenH"><i class="icon-twitter2"></i></a>
+									<a href="https://www.ircam.fr/person/alice-cohen-hadria/"><i class="icon-music2"></i></a>
 									<a href="https://www.linkedin.com/in/alice-cohen-hadria-a8913a146/"><i class="icon-linkedin"></i></a>
 								</p>
-								<p><a href="mailto:alice.cohenhadria@gmail.com" class="btn btn-primary btn-outline">Contact Me!</a></p>
+								<p><a href="mailto:alice.cohenhadria@gmail.com" class="
+									 btn-primary btn-outline">Contact Me!</a></p>
 							</div>
 						</div>
 					</div>
