update copyright gabriel

--- a/dali.html
+++ b/dali.html
@@ -131,7 +131,9 @@
 						<div class="work-entry animate-box">
 							<!-- <a href="papers.html" class="work-img" style="background-image: url(images/work-2.jpg);">
 							</a> -->
-							<img class="img-responsive" src="images/work-11.png" alt="html5 bootstrap template by colorlib.com" /><br>
+							<img class="img-responsive" src="images/work-11.png" alt="html5 bootstrap template by colorlib.com" />
+								<footer><small> &#9400; Gabriel Meseguer Brocal </small></footer>
+							<br>
 							<div class="col-md-8 col-md-offset-2">
 								<div class="desc">
 									<h2>Abstract</h2>
