--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
 									<a href="https://www.ircam.fr/person/alice-cohen-hadria/"><i class="icon-music2"></i></a>
 									<a href="https://www.linkedin.com/in/alice-cohen-hadria-a8913a146/"><i class="icon-linkedin"></i></a>
 								</p>
-								<p><a href="mailto:alice.cohenhadria@gmail.com" class="
-									 btn-primary btn-outline">Contact Me!</a></p>
+								<p><a href="mailto:alice.cohenhadria@gmail.com" class="btn-primary btn-outline">Contact Me!</a></p>
 							</div>
 						</div>
 					</div>
