remove skill box

--- a/cv.html
+++ b/cv.html
@@ -183,7 +183,7 @@
 			</div>
 		</div>
 
-		<div id="colorlib-progress">
+		<!-- <div id="colorlib-progress">
 			<div class="container">
 				<div class="row text-center">
 					<h2 class="bold">Skills</h2>
@@ -246,7 +246,7 @@
 		                <div class="progress-value">80%</div>
 		            </div>
 		         </div>
-			   </div>
+			   </div> -->
 			</div>
 		</div>
 
