--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 										<div class="services animate-box">
 											<h3>1 - Work Experiences</h3>
 											<ul>
-												<li>PhD @IRCAm - Music Description Estimation with Deep Learning. Supervised by Geoffroy Peeters.</li>
+												<li>PhD @IRCAm - Music Description Estimation with Deep Learning. Supervised by Geoffroy Peeters. <a href="https://medias.ircam.fr/x96587b">Defense presentation</a></li>
 												<li>Visiting Scholar @NYU - Voice anonymization in urban sounds. Supervised by Mark Cartwright, Brian McFee and Juan Bello.</li>
 												<li>Internship @LIP6 - Generic programming for combinatorial classes in Ocaml. Supervised by Matthieu Dien.</li>
 
