--- a/cv.html
+++ b/cv.html
@@ -133,6 +133,9 @@
 										<div class="services animate-box">
 											<h3>1 - Work Experiences</h3>
 											<ul>
+												<li>Postdoc @IRIT -  Automatic Speech Recognition
+for Computer-Assisted Language Learning.  Supervised by  Isabelle Ferrané, Thomas Pellegrini and Julien Pinquier (IRIT, France), Lionel
+Fontan and Maxime Le Coz (Archean LABS, Montauban, France). </li>
 												<li>PhD @IRCAm - Music Description Estimation with Deep Learning. Supervised by Geoffroy Peeters.<a href="https://medias.ircam.fr/x96587b">Defense presentation</a>
 												<a href="defenseSlide.pdf">Defense slides</a></li>
 												<li>Visiting Scholar @NYU - Voice anonymization in urban sounds. Supervised by Mark Cartwright, Brian McFee and Juan Bello.</li>
