--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>I am interested in using deep learning method to estimate any musical description. Particularly, I’ve worked on musical structure estimation and voice processing with Convolutional Neural Network (CNN). My work fits in Music Information Retrieval (MIR) field, from signal processing to any neural network methods.</p>
+								<p>I am interested in using deep learning method to estimate any musical description. Particularly, I’ve worked on musical structure estimation and voice processing with Convolutional Neural Network (CNN). My work fits in Music Information Retrieval (MIR) field, from signal processing to any neural network methods. I am currently employed by IRIT (Toulouse Institute of Computer Science Research) for a postdoc on pronunciation errors detection.</p>
 								<p class="colorlib-social-icons">
 									<a href="https://twitter.com/AliceCohenH"><i class="icon-twitter2"></i></a>
 									<a href="https://www.ircam.fr/person/alice-cohen-hadria/"><i class="icon-music2"></i></a>
@@ -176,6 +176,9 @@
 										<div class="services animate-box">
 											<h3>1 - Work Experiences</h3>
 											<ul>
+<li>Postdoc @IRIT -  Automatic Speech Recognition
+for Computer-Assisted Language Learning.  Supervised by  Isabelle Ferrané, Thomas Pellegrini and Julien Pinquier (IRIT, France), Lionel
+Fontan and Maxime Le Coz (Archean LABS, Montauban, France). </li>
 												<li>PhD @IRCAm - Music Description Estimation with Deep Learning. Supervised by Geoffroy Peeters. <a href="https://medias.ircam.fr/x96587b">Defense video</a>
 												<a href="defenseSlide.pdf">Defense slides</a></li>
 												<li>Visiting Scholar @NYU - Voice anonymization in urban sounds. Supervised by Mark Cartwright, Brian McFee and Juan Bello.</li>
