--- a/about.html
+++ b/about.html
@@ -124,7 +124,8 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>I am interested in using deep learning method to estimate any musical description. Particularly, I’ve worked on musical structure estimation and voice processing with Convolutional Neural Network (CNN). My work fits in Music Information Retrieval (MIR) field, from signal processing to any neural network methods.</p>
+								<p>I am interested in using deep learning method to estimate any musical description. Particularly, I’ve worked on musical structure estimation and voice processing with Convolutional Neural Network (CNN). My work fits in Music Information Retrieval (MIR) field, from signal processing to any neural network methods.
+								I am currently employed by IRIT (Toulouse Institute of Computer Science Research) for a postdoc on pronunciation errors detection. </p>
 								<p class="colorlib-social-icons">
 									<a href="https://twitter.com/AliceCohenH"><i class="icon-twitter3"></i></a>
 									<a href="https://www.ircam.fr/person/alice-cohen-hadria/"><i class="icon-dribbble2"></i></a>
